tests/type_errors/wrong_record_type.nos
# expect_error: type mismatch
# Test: passing wrong record type to function

type Point = { x: Int, y: Int }
type Size = { width: Int, height: Int }

getX(p: Point) = p.x

main() = {
    s = Size(100, 200)
    getX(s)  # Size is not Point
}
